--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,10 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.11.3</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
